# babybook

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANALISE_DIVERGENCIA.md  BLUEPRINT_CONFORMIDADE.md  CHECKLIST_FINAL.md  CHECKLIST_VALIDACAO_ARQUITETURA.md  COMPONENTES_GUIA.md  DESIGN_MIGRATION_README.md  DESIGN_MIGRATION_SUMMARY.md  GUIA_USO_COMPONENTES.md  INDEX.md  QUICK_START.md  README.md  ROADMAP_FASES.md  SETUP_DOCKER_INSTRUCTIONS.md  SUMARIO_EXECUTIVO.md  TAREFAS_COMPLETADAS.md  VISAO_GERAL.md  babybook_test.db  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-all-services.ps1  run-landingpage.ps1
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0000_core_schema.py  0001_b2b2c_media_assets.py  0002_billing_breakdown.py  0003_delivery_archived_at.py  0004_child_pce_credit_status_ledger.py  0005_assets_child_id.py  0006_assets_unique_child_sha.py  0007_delivery_credit_not_required.py  0008_delivery_target_email.py  0009_delivery_list_filter_indexes.py  0010_delivery_target_child_id.py  0011_user_notifications_preferences.py  0012_upload_sessions_storage_upload_id.py  0013_guestbook_invites_relationship_degree.py  0014_affiliates_program.py  34b05ce16909_update_guest_invites_schema.py  65e767b851f7_security_stage_2.py  8a5f5f4c0ea3_create_notifications_and_invites.py
apps/api/babybook_api/: deps.py  errors.py  feature_flags.py  main.py  observability.py  openapi.yaml  rate_limit.py  request_ip.py  security.py  settings.py  time.py
apps/api/babybook_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/babybook_api/auth/: constants.py  service.py  session.py
apps/api/babybook_api/db/: models.py
apps/api/babybook_api/domain/: quotas.py
apps/api/babybook_api/routes/: affiliates_admin.py  affiliates_portal.py  assets.py  auth.py  billing.py  chapters.py  children.py  deliveries.py  guestbook.py  health.py  me.py  media_processing.py  moments.py  notifications.py  partner_portal.py  partners.py  people.py  resumable_uploads.py  series.py  settings.py  shares.py  uploads.py  usage.py  vault.py  vouchers.py
apps/api/babybook_api/schemas/: __init__.py  assets.py  auth.py  chapters.py  children.py  deliveries.py  guestbook.py  guestbook_invites.py  me.py  media_processing.py  moments.py  notifications.py  partner_portal.py  partners.py  people.py  series.py  shares.py  uploads.py  vault.py  vouchers.py
apps/api/babybook_api/services/: affiliates.py  auth.py  inline_worker.py  notification.py  queue.py  seed_affiliates.py
apps/api/babybook_api/storage/: __init__.py  base.py  factory.py  hybrid_service.py  partner_service.py  paths.py  resumable_upload.py
apps/api/babybook_api/tests/: conftest.py  test_affiliates_module.py  test_auth_logout_csrf.py  test_auth_oauth_dev.py  test_auth_register.py  test_billing.py  test_direct_import.py  test_domain_entities.py  test_header_session_auth.py  test_health.py  test_magic_bytes_validation.py  test_me.py  test_media_processing_callback_url_ssrf.py  test_partner_tmp_upload_validation.py  test_seeds.py  (+2 more)
apps/workers/: Dockerfile  README.md  pyproject.toml
apps/workers/app/: api_client.py  exports.py  ffmpeg.py  file_validation.py  images.py  main.py  media_processing.py  notifications.py  queue.py  settings.py  storage.py  types.py
apps/workers/babybook_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/workers/templates/: guestbook_invite.html
(+674 files in other folders)
