[project]
name = "babybook-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aioboto3>=12.4.0",
  "orjson>=3.10.6",
  "pillow>=10.4.0",
  "tenacity>=8.5.0"
]

[project.optional-dependencies]
test = ["pytest>=8.3.2"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
